# ceresBA

./: CMakeLists.txt  Gradient.docx  helloworld_analytic_diff.cc  main.cpp
